@@ -1,0 +1,8 @@
+input.tree.file=LSU.dnd
+input.tree.format=Newick
+
+output.drawing.file=LSU.svg
+output.drawing.format=svg
+output.drawing.plot=phylogram(xu=300, yu=12)
+
+
