@@ -1,3 +1,6 @@
+22/07/09 Julien Dutheil
+* Added program bppTreeDraw.
+
 30/06/09 Julien Dutheil
 * BppAncestor: now output expected ancestral states frequencies.
 * BppAncestor: new method to compute EB estimates of ancestral states frequencies.
